Improve User Experience by Removing Extra Padding and Margins in UI Features: 1. Improved the Customers List view, and implemented the changes from the contacts view 2. fixed some UI Changes in the contact list view 3. Added the backend search, pagiantion in the customer list view

--- a/static/assets/css/soft-ui-dashboard.css
+++ b/static/assets/css/soft-ui-dashboard.css
@@ -37532,7 +37532,11 @@ ul.pagination > li.page-item:last-child{
   font-size: 0.65rem;
 }
 
-.table{
+.table.table-hover tbody tr{
+  cursor: pointer !important;
+}
+
+.table.table-hover{
   border-collapse: collapse !important;
 }
 
